# nncms

./: AUTHORS  CMakeLists.txt  ChangeLog  README  TODO  aclocal.m4  configure.ac  make_readme.sh  nncms.cbp  nncms.geany  nncms.sh  temp.c
files/: index.html  main.html  nncms.db  robots.txt
files/blocks/: admin.html  navigation.html
files/cache/uf/test/: 00a84bzb_200x200.jpe
files/help/: acl_help.html  index.html
files/templates/: acl_add.html  acl_delete.html  acl_edit.html  acl_object_foot.html  acl_object_head.html  acl_object_row.html  acl_view_foot.html  acl_view_head.html  acl_view_row.html  ban_add.html  ban_delete.html  ban_edit.html  ban_view.html  ban_view_row.html  ban_view_structure.html  block.html  cache_admin.html  cfg_edit.html  cfg_view_foot.html  cfg_view_head.html  cfg_view_row.html  database_edit.html  database_table_view.html  database_view.html  file_add.html  file_browser_dir.html  file_browser_file.html  file_browser_foot.html  file_browser_head.html  file_delete.html  file_edit.html  file_mkdir.html  file_rename.html  file_upload.html  form.html  frame.html  gallery_dir.html  gallery_empty.html  gallery_file.html  gallery_image.html  (+76 more)
files/uf/test/asd/: 00a84bzb.jpe  jhgf.txt
src/: CMakeLists.txt  Makefile.am  abuse.sql  abuse_prevention.sh  acl.c  acl.h  array.c  array.h  asprintf.c  asprintf.h  bad-ip.csv  ban.c  ban.h  booltest.c  cache.c  cache.h  canonicalize.c  canonicalize.h  cfg.c  cfg.h  config.h  database.c  database.h  dirname_r.c  dirname_r.h  field.c  field.h  file.c  file.h  filter.c  filter.h  form.c  form.h  gettok.c  gettok.h  group.c  group.h  i18n.c  i18n.h  log.c  (+47 more)
